--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "connect-multiparty": "^2.1.0",
     "cookie-parser": "^1.4.3",
     "express": "^4.16.3",
+    "express-promise": "^0.4.0",
     "log4js": "^2.5.3",
     "mysql": "^2.15.0"
   }
